fixing dnd on mobile (ticket group height)

--- a/src/styles/components/_ticket-group.scss
+++ b/src/styles/components/_ticket-group.scss
@@ -13,8 +13,7 @@
     position: relative;
 
     @media (hover: none) and (pointer: coarse) {
-        max-height: 20%;
-        background-color: blue !important;
+        max-height: 100px !important;
     }
 
     .ticket-group-header {
